feat(contacts): contacts HTTP endpoints
